# dual-server

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/: __init__.py  root_router.py  routes.py
tests/: conftest.py  test_health.py
