[project]
name = "dual-server"
version = "0.1.0"
description = "bluheeggg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.3",
    "uvicorn>=0.37.0",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "pydantic>=2.12.0",
    "websockets>=15.0.1",
    "pillow>=11.3.0",
]
